--- a/src/index.html
+++ b/src/index.html
@@ -30,21 +30,23 @@
         <div class="hidden md:flex items-center space-x-12">
           <a
             href="#home"
-            class="hover:text-selected-text transition-all duration-300"
+            class="hover:text-selectedText transition-all duration-300"
             >ホーム</a
           >
           <a
             href="#portfolio"
-            class="hover:text-selected-text transition-all duration-300"
+            class="hover:text-selectedText transition-all duration-300"
             >ポートフォリオ</a
           >
           <a
             href="#clients"
-            class="hover:text-selected-text transition-all duration-300"
+            class="hover:text-selectedText transition-all duration-300"
             >お客様</a
           >
           <a href="#contact"
-            ><button class="px-6 py-2 bg-theme font-bold rounded-lg">
+            ><button
+              class="px-6 py-2 bg-theme font-bold rounded-lg hover:bg-purple-600 transition-all duration-300"
+            >
               お問い合わせ
             </button></a
           >
@@ -87,13 +89,15 @@
           </h1>
 
           <div class="w-full flex justify-center md:justify-start"></div>
-          <button class="px-8 py-4 bg-theme font-bold rounded-lg mt-10">
+          <button
+            class="px-8 py-4 bg-theme font-bold rounded-lg mt-10 hover:bg-purple-600 transition-all duration-300"
+          >
             <i class="fa-solid fa-rocket mr-1"></i>
             <span>もっと見る</span>
           </button>
         </div>
         <img
-          src="./images/human3.jpg"
+          src="./images/human.jpg"
           alt="image"
           class="md:absolute lg:w-3/6 lg:top-2 lg:right-52 md:w-3/5 w-10/12 mt-12 md:mt-0 right-6 -z-1 mx-auto"
         />
@@ -113,34 +117,34 @@
 
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6">
           <img
-            src="https://images.unsplash.com/photo-1576153192396-180ecef2a715?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80"
+            src="./images/portfolio1.jpg"
             alt=""
-            class="w-full bg-nav h-36 lg:h-72 object-cover"
+            class="w-full bg-nav h-36 lg:h-72 object-cover rounded-md cursor-pointer"
           />
           <img
-            src="https://images.unsplash.com/photo-1545235617-9465d2a55698?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80"
+            src="./images/portfolio2.jpg"
             alt=""
-            class="w-full bg-nav h-36 lg:h-72 object-cover"
+            class="w-full bg-nav h-36 lg:h-72 object-cover rounded-md cursor-pointer"
           />
           <img
-            src="https://images.unsplash.com/photo-1586717791821-3f44a563fa4c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80"
+            src="./images/portfolio3.jpg"
             alt=""
-            class="w-full bg-nav h-36 lg:h-72 object-cover"
+            class="w-full bg-nav h-36 lg:h-72 object-cover rounded-md cursor-pointer"
           />
           <img
-            src="https://images.unsplash.com/photo-1558655146-d09347e92766?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=764&q=80"
+            src="./images/portfolio4.jpg"
             alt=""
-            class="w-full bg-nav h-36 lg:h-72 object-cover"
+            class="w-full bg-nav h-36 lg:h-72 object-cover rounded-md cursor-pointer"
           />
           <img
-            src="https://images.unsplash.com/photo-1547119957-637f8679db1e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80"
+            src="./images/portfolio5.jpg"
             alt=""
-            class="w-full bg-nav h-36 lg:h-72 object-cover"
+            class="w-full bg-nav h-36 lg:h-72 object-cover rounded-md cursor-pointer"
           />
           <img
-            src="https://images.unsplash.com/photo-1559028012-481c04fa702d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1336&q=80"
+            src="./images/portfolio6.jpg"
             alt=""
-            class="w-full bg-nav h-36 lg:h-72 object-cover"
+            class="w-full bg-nav h-36 lg:h-72 object-cover rounded-md cursor-pointer"
           />
         </div>
       </section>
@@ -152,87 +156,87 @@
       class="container mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full"
     >
       <section class="w-full">
-        <h2 id="clients" class="secondary-title">クライアント</h2>
+        <h2 id="clients" class="secondary-title">スキルスタック</h2>
         <p class="section-paragraph">
-          私は100以上の会社の方と取引をしてきました
+          私は以下のプログラミング言語を10年以上取り扱ってきました。
         </p>
         <div class="space-y-12 my-16">
           <div
-            class="w-full border border-nav p-16 lg:px-32 lg:py-20 lg:space-x-32 flex justify-center lg:justify-start flex-wrap lg:flex-nowrap"
+            class="w-full border border-nav p-16 lg:px-32 lg:py-20 lg:space-x-32 flex justify-center lg:justify-start flex-wrap lg:flex-nowrap hover:border-yellow-200 transition-all duration-300 cursor-pointer"
           >
             <!-- client logo -->
             <div class="mb-6 lg:mb-0 self-center">
-              <i class="fa-brands fa-apple text-6xl"></i>
+              <i class="fa-brands fa-js-square text-7xl text-yellow-200"></i>
             </div>
 
             <!-- client info -->
             <div
               class="flex flex-wrap justify-center text-center lg:text-left lg:block"
             >
-              <h3 class="text-white text-3xl font-semibold">Apple, Inc.</h3>
+              <h3 class="text-3xl font-semibold">Javascript</h3>
               <div
                 class="w-full lg:w-auto flex flex-wrap justify-center lg:justify-start gap-3 mt-6 mb-8"
               >
-                <div class="badge">UI/UX</div>
+                <div class="badge">ウェブサイト制作</div>
                 <div class="badge">フロントエンド開発</div>
               </div>
 
               <p class="text-secondary">
-                アップル社の製品をフロントエンド開発として手掛けてきました。納品のクオリティは保証します。
+                Javascriptエンジニア。普段はReactを使って開発現場で働いています。
               </p>
             </div>
           </div>
         </div>
         <div class="space-y-12 my-16">
           <div
-            class="w-full border border-nav p-16 lg:px-32 lg:py-20 lg:space-x-32 flex justify-center lg:justify-start flex-wrap lg:flex-nowrap flex-re"
+            class="w-full border border-nav p-16 lg:px-32 lg:py-20 lg:space-x-32 flex justify-center lg:justify-start flex-wrap lg:flex-nowrap hover:border-blue-600 transition-all duration-300 cursor-pointer"
           >
             <!-- client logo -->
             <div class="mb-6 lg:mb-0 self-center">
-              <i class="fa-brands fa-apple text-6xl"></i>
+              <i class="fa-brands fa-python text-7xl text-blue-600"></i>
             </div>
 
             <!-- client info -->
             <div
               class="flex flex-wrap justify-center text-center lg:text-left lg:block"
             >
-              <h3 class="text-white text-3xl font-semibold">Apple, Inc.</h3>
+              <h3 class="text-white text-3xl font-semibold">Python</h3>
               <div
                 class="w-full lg:w-auto flex flex-wrap justify-center lg:justify-start gap-3 mt-6 mb-8"
               >
-                <div class="badge">UI/UX</div>
-                <div class="badge">フロントエンド開発</div>
+                <div class="badge">AI/DX</div>
+                <div class="badge">データサイエンス</div>
               </div>
 
               <p class="text-secondary">
-                アップル社の製品をフロントエンド開発として手掛けてきました。納品のクオリティは保証します。
+                AI開発をメインに仕事を受注。企業のデータ分析も手掛けております。
               </p>
             </div>
           </div>
         </div>
         <div class="space-y-12 my-16">
           <div
-            class="w-full border border-nav p-16 lg:px-32 lg:py-20 lg:space-x-32 flex justify-center lg:justify-start flex-wrap lg:flex-nowrap"
+            class="w-full border border-nav p-16 lg:px-32 lg:py-20 lg:space-x-32 flex justify-center lg:justify-start flex-wrap lg:flex-nowrap hover:border-orange-400 transition-all duration-300 cursor-pointer"
           >
             <!-- client logo -->
             <div class="mb-6 lg:mb-0 self-center">
-              <i class="fa-brands fa-apple text-6xl"></i>
+              <i class="fa-brands fa-html5 text-7xl text-orange-400"></i>
             </div>
 
             <!-- client info -->
             <div
               class="flex flex-wrap justify-center text-center lg:text-left lg:block"
             >
-              <h3 class="text-white text-3xl font-semibold">Apple, Inc.</h3>
+              <h3 class="text-white text-3xl font-semibold">HTML/CSS</h3>
               <div
                 class="w-full lg:w-auto flex flex-wrap justify-center lg:justify-start gap-3 mt-6 mb-8"
               >
                 <div class="badge">UI/UX</div>
-                <div class="badge">フロントエンド開発</div>
+                <div class="badge">ホームページ制作</div>
               </div>
 
               <p class="text-secondary">
-                アップル社の製品をフロントエンド開発として手掛けてきました。納品のクオリティは保証します。
+                100社以上のホームページ制作を手掛けてきました。作れないウェブサイトはありません。
               </p>
             </div>
           </div>
@@ -259,7 +263,7 @@
               </label>
               <input
                 type="text"
-                class="w-full border border-input-border bg-input px-4 py-4"
+                class="w-full border border-inputBorder bg-input px-4 py-4"
               />
             </div>
             <div>
@@ -268,7 +272,7 @@
               </label>
               <input
                 type="text"
-                class="w-full border border-input-border bg-input px-4 py-4"
+                class="w-full border border-inputBorder bg-input px-4 py-4"
               />
             </div>
             <div>
@@ -277,10 +281,12 @@
               </label>
               <input
                 type="text"
-                class="w-full border border-input-border bg-input px-4 py-4"
+                class="w-full border border-inputBorder bg-input px-4 py-4"
               />
             </div>
-            <button class="px-8 py-3 bg-theme text-white font-bold rounded-md">
+            <button
+              class="px-8 py-3 bg-theme text-white font-bold rounded-md hover:bg-purple-600 transition-all duration-300"
+            >
               送信する
             </button>
           </div>
@@ -291,13 +297,13 @@
             <!-- socials -->
             <div class="flex mt-20 space-x-6">
               <a href="#">
-                <i class="fa-brands fa-twitter text-3xl"></i>
+                <i class="fa-brands fa-twitter text-3xl text-blue-400"></i>
               </a>
               <a href="#">
-                <i class="fa-brands fa-facebook text-3xl"></i>
+                <i class="fa-brands fa-facebook text-3xl text-blue-600"></i>
               </a>
               <a href="#">
-                <i class="fa-brands fa-instagram text-3xl"></i>
+                <i class="fa-brands fa-instagram text-3xl text-pink-400"></i>
               </a>
             </div>
           </div>
